--- a/app.json
+++ b/app.json
@@ -20,6 +20,8 @@
       "supportsTablet": true
     },
     "android": {
+      "package":"ke.onion.mealsapp",
+      "version":1,
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
